# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  demo.cast.calc  demo.cast.gcd  demo.cast.prime  demo.cast.progression  pyproject.toml
brain_games/: brain_even.py  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
