[project]
name = "python-project-49"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.ruff]
line-length = 80
select = ["E", "F", "I", "C90"]
preview = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
